--- a/src/FlatMate.Web/wwwroot/css/lists/itemlist-view.scss
+++ b/src/FlatMate.Web/wwwroot/css/lists/itemlist-view.scss
@@ -1,6 +1,24 @@
 ﻿@import '../variables.scss';
 
 .itemlist-view {
+
+    .group-title, .item-name {
+        cursor: pointer;
+
+        i {
+            color: #555;
+            display: none;
+        }
+
+        &:hover {
+            i {
+                display: inline-block;
+            }
+        }
+    }
+
+
+
     .lasteditor {
         display: block;
     }
