--- a/src/FlatMate.Web/wwwroot/css/lists/itemlist-view.scss
+++ b/src/FlatMate.Web/wwwroot/css/lists/itemlist-view.scss
@@ -23,7 +23,14 @@
 
     .drag-placeholder {
         td {
-            background-color: #ddd;
+            height: inherit;
+            padding: 0.5rem;
+        }
+
+        div {
+            background-color: #f5f7fb;
+            width: 100%;
+            height: 100%;
         }
     }
 
