- fix IE javascript

--- a/src/FlatMate.Web/wwwroot/css/_vendor/tablr-card.scss
+++ b/src/FlatMate.Web/wwwroot/css/_vendor/tablr-card.scss
@@ -59,6 +59,7 @@ $card-spacer-y: 1.5rem;
     background: none;
     padding: .5rem $card-spacer-x;
     display: flex;
+    height: 3.5rem;
     min-height: 3.5rem;
     align-items: center;
     border-bottom: 1px solid $color-border;
