--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
     ViewData["Title"] = "Mein Profil";
     ViewData["PageTitle"] = "Mein Profil";
-    ViewData["MainClass"] = "myprofileindex";
+    ViewData["MainClass"] = "account-myprofile-index";
 }
 
 <section class="container">
