--- a/src/FlatMate.Web/wwwroot/css/offers/company-index.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/company-index.scss
@@ -1,4 +1,6 @@
-﻿.company-index {
+﻿@import '../variables.scss';
+
+.company-index {
     .card-company {
         display: block;
         color: #000;
