--- a/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
@@ -1,80 +1,88 @@
 ﻿@import '../variables.scss';
 
 @media all and (min-width: 1201px) {
-    #menu-checkbox:not(:checked) ~ nav {
-        width: $nav-width;
-    }
+  #menu-checkbox:not(:checked) ~ nav {
+    width: $nav-width;
+  }
 
-    #menu-checkbox:checked ~ nav {
-        width: 0;
-    }
+  #menu-checkbox:checked ~ nav {
+    width: 0;
+  }
 }
 
 @media all and (max-width: 1200px) {
-    #menu-checkbox:not(:checked) ~ nav {
-        width: 0;
-    }
+  #menu-checkbox:not(:checked) ~ nav {
+    width: 0;
+  }
 
-    #menu-checkbox:checked ~ nav {
-        width: $nav-width;
-        max-width: 100vw;
-    }
+  #menu-checkbox:checked ~ nav {
+    width: $nav-width;
+    max-width: 100vw;
+  }
 }
 
 nav {
-    height: 100vh;
-    position: fixed;
-    overflow: hidden;
-    background-color: #fff;
-    padding-top: $header-height;
-    border-right: 1px solid $color-border;
-    z-index: 10;
-    transition: width ease-out .25s;
+  height: 100vh;
+  position: fixed;
+  overflow: hidden;
+  background-color: #fff;
+  padding-top: $header-height;
+  border-right: 1px solid $color-border;
+  z-index: 10;
+  transition: width ease-out .25s;
 
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 0.8rem;
+  }
+
+  li {
+    list-style: none;
+    margin: 0;
+    border-bottom: $border-thickness solid $color-border;
+
+    a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      padding: 10px 0px 10px 15px;
+      color: $color-font;
+      border-left: 0 solid #fff;
+
+      &:hover {
+        color: $color-font;
+        transition: border-color ease-out .2s;
+        padding-left: 10px;
+        border-left: 5px solid $color-primary;
+      }
     }
-
-    li {
-        list-style: none;
-        margin: 0;
-        border-bottom: $border-thickness solid $color-border;
-
-        a {
-            width: 100%;
-            height: 100%;
-            display: block;
-            padding: 10px;
-            color: $color-font;
-            border-left: 0px solid #fff;
-
-            &:hover {
-                color: $color-font;
-                transition: border-color ease-out .2s;
-                padding-left: 5px;
-                border-left: 5px solid $color-primary;
-            }
-        }
-    }
+  }
 }
 
 nav + main {
-    padding-top: $header-height + 15px;
+  padding-top: $header-height + 15px;
 }
 
 @media all and (min-width: 1201px) {
-    nav + main {
-        margin-left: $nav-width;
-        width: auto;
-    }
+  nav + main {
+    margin-left: $nav-width;
+    width: auto;
+  }
 }
 
 .menu-toggle {
-    margin: 0 1rem;
+  margin: 0 1rem;
 
-    label {
-        cursor: pointer;
-    }
+  label {
+    cursor: pointer;
+  }
+}
+
+nav {
+  .cat {
+    padding: 10px;
+    border-bottom: $border-thickness solid $color-border;
+  }
 }
