- fix routing - improve styling

--- a/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
@@ -8,7 +8,7 @@
 
 <section class="container centered-form">
 
-    <form asp-area="Account" asp-controller="Login" method="post" class="card">
+    <form asp-area="Account" asp-controller="Login" method="post">
 
         <div class="card-body">
 
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="form-footer">
-                    <input class="btn-primary btn-block" type="submit" value="Login">
+                    <input class="btn-primary btn-block ml-auto" type="submit" value="Login">
                 </div>
 
             </fieldset>
