add itemcount to get all lists

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -31,6 +31,7 @@
                 <thead>
                 <tr>
                     <th width="75%">Name</th>
+                    <th class="show-large center fit">Einträge</th>
                     <th class="show-large center fit">öffentlich?</th>
                     <th class="icon show-large fit"></th>
                 </tr>
@@ -42,6 +43,9 @@
                     <tr>
                         <td>
                             <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                        </td>
+                        <td class="show-large center">
+                            @list.ItemCount
                         </td>
                         <td class="show-large center">
                             <span class="fa-inline-host">
@@ -89,6 +93,7 @@
                     <thead>
                     <tr>
                         <th width="75%">Name</th>
+                        <th class="show-large center fit">Einträge</th>
                         <th class="show-large">von</th>
                         <th class="icon fit"></th>
                     </tr>
@@ -100,6 +105,7 @@
                             <td>
                                 <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
                             </td>
+                            <td class="show-large">@list.ItemCount</td>
                             <td class="show-large">@list.Owner.UserName</td>
                             <td class="icon">
                                 <a asp-area="Lists" asp-controller="ItemList" asp-action="Unfavorite" asp-route-id="@list.Id" class="fa-host danger" aria-hidden="true" title="Als Favorit entfernen">
